<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/addWeedFrame"
    tools:context=".AddWeedFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/linearLayoutAdd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15sp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/weedImage"
                android:layout_width="match_parent"
                android:layout_height="350sp"
                android:layout_marginVertical="10sp"
                android:backgroundTint="@color/black"
                android:scaleType="fitCenter"
                android:contentDescription="@string/photo_weed_description"/>

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:id="@+id/linearLayoutAddPhoto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/photoText"
                    android:layout_width="126dp"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/roboto_medium"
                    android:gravity="center_vertical"
                    android:text="@string/photo_text"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageButton
                        android:id="@+id/takePictureButton"
                        android:layout_width="50sp"
                        android:layout_height="50sp"
                        android:backgroundTint="@color/green"
                        android:contentDescription="@string/description_camera_text"
                        android:src="@drawable/ic_photo_camera" />

                    <ImageButton
                        android:id="@+id/addPhotoButton"
                        android:layout_width="50sp"
                        android:layout_height="50sp"
                        android:layout_marginStart="60sp"
                        android:backgroundTint="@color/green"
                        android:contentDescription="@string/description_gallery_text"
                        android:src="@drawable/ic_add_photo" />
                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayoutName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/nameWeedText"
                    android:layout_width="126sp"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/roboto_medium"
                    android:gravity="center_vertical"
                    android:text="Название"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/nameWeedInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/hint_name_weed"
                    android:inputType="textPersonName"
                    android:minHeight="48dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/nameWeedLatText"
                    android:layout_width="126dp"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/roboto_medium"
                    android:gravity="center_vertical"
                    android:text="@string/name_weed_lat_text"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/nameWeedLatInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/hint_name_weed_lat"
                    android:inputType="textPersonName"
                    android:minHeight="48dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayoutLatitude"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/latitudeText"
                    android:layout_width="126sp"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/roboto_medium"
                    android:gravity="center_vertical"
                    android:text="@string/latitude_text"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/latitudeInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/hint_latitude"
                    android:inputType="textPersonName"
                    android:minHeight="48dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayoutLongitude"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/longitudeText"
                    android:layout_width="126sp"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/roboto_medium"
                    android:gravity="center_vertical"
                    android:text="@string/longitude_text"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/longitudeInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/hint_longitude"
                    android:inputType="textPersonName"
                    android:minHeight="48dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayoutArea"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/areaText"
                    android:layout_width="126sp"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/roboto_medium"
                    android:gravity="center_vertical"
                    android:text="@string/area_text"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/areaInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/hint_area"
                    android:inputType="textPersonName"
                    android:minHeight="48dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayoutAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/addressText"
                    android:layout_width="126dp"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/roboto_medium"
                    android:gravity="center_vertical"
                    android:text="@string/address_text"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/addressInput"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/hint_address"
                    android:inputType="textPersonName"
                    android:minHeight="48dp" />

                <ImageButton
                    android:id="@+id/gpsButton"
                    android:layout_width="50dp"
                    android:layout_height="50sp"
                    android:layout_marginStart="5sp"
                    android:backgroundTint="@color/green"
                    android:contentDescription="@string/description_address_text"
                    android:src="@drawable/ic_gps"
                    tools:ignore="TouchTargetSizeCheck" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayoutCulture"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/cultureText"
                    android:layout_width="126sp"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/roboto_medium"
                    android:gravity="center_vertical"
                    android:text="@string/culture_text"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <Spinner
                    android:id="@+id/cultureSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:spinnerMode="dropdown" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayoutCoating"
                android:layout_width="match_parent"
                android:layout_height="48sp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/coatingText"
                    android:layout_width="126sp"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/roboto_medium"
                    android:gravity="center_vertical"
                    android:text="@string/coating_text"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <Spinner
                    android:id="@+id/coatingSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:spinnerMode="dropdown" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayoutChemical"
                android:layout_width="match_parent"
                android:layout_height="48sp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/chemicalText"
                    android:layout_width="126sp"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/roboto_medium"
                    android:gravity="center_vertical"
                    android:text="@string/chemical_text"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <Spinner
                    android:id="@+id/chemicalSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:spinnerMode="dropdown" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayoutDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/dateText"
                    android:layout_width="126sp"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/roboto_medium"
                    android:gravity="center_vertical"
                    android:text="@string/date_text"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/dateInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/hint_date"
                    android:inputType="date"
                    android:clickable="false"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayoutEfficiency"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/efficiencyText"
                    android:layout_width="126sp"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/roboto_medium"
                    android:gravity="center_vertical"
                    android:text="@string/efficiency_text"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <Spinner
                    android:id="@+id/efficiencySpinner"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:spinnerMode="dropdown" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayoutComment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/commentText"
                    android:layout_width="126dp"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/roboto_medium"
                    android:gravity="center_vertical"
                    android:text="@string/comment_text"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/commentInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:gravity="start|top"
                    android:hint="@string/hint_comment"
                    android:inputType="textMultiLine"
                    android:maxLength="200" />
            </LinearLayout>

            <Button
                android:id="@+id/addWeedButton"
                android:layout_width="match_parent"
                android:layout_height="65sp"
                android:text="@string/add_weed_button"
                android:fontFamily="@font/roboto_black"
                android:layout_marginTop="10sp"
                android:textSize="18sp"
                android:backgroundTint="@color/green"/>

        </LinearLayout>
    </ScrollView>

</FrameLayout>