<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayoutGlobal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="16sp">

    <androidx.cardview.widget.CardView xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16sp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/nameWeed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4sp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/name_weed_text"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/nameWeedLat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_medium"
                android:paddingStart="4sp"
                android:paddingBottom="4sp"
                android:text="@string/name_weed_lat_text"
                android:textColor="@color/grey"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/globalImageWeed"
                android:layout_width="match_parent"
                android:layout_height="250sp"
                android:contentDescription="@string/photo_weed_description"
                android:scaleType="centerCrop" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:paddingStart="4sp"
                android:paddingTop="4sp">

                <ImageView
                    android:id="@+id/userImage"
                    android:layout_width="40sp"
                    android:layout_height="40sp"
                    android:layout_gravity="left"
                    android:contentDescription="@string/user_photo_description"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/ic_person_green" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/typeUser"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_medium"
                        android:text="@string/name_user_text"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/dateAdded"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        android:fontFamily="@font/roboto_medium"
                        android:text="@string/date_add_text"
                        android:textSize="14sp" />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</RelativeLayout>