<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/relativeLayoutLocal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="16sp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16sp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/nameWeedLocal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4sp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/name_weed_text"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/nameWeedLatLocal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_medium"
                android:paddingStart="4sp"
                android:paddingBottom="4sp"
                android:text="@string/name_weed_lat_text"
                android:textColor="@color/grey"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/localImageWeed"
                android:layout_width="match_parent"
                android:layout_height="250sp"
                android:contentDescription="@string/photo_weed_description"
                android:scaleType="centerCrop" />

            <TextView
                android:id="@+id/dateAddedLocal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/date_add_text"
                android:textSize="14sp" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</RelativeLayout>